2007-02-25  Gabor Kelemen  <kelemeng@gnome.hu>

	* installer/win32/locale/hungarian.nsh: 
	* installer/win32/dia.nsi: Hungarian installer translation added.

2007-02-18  Hans Breuer  <hans@breuer.org>

	* app/diagram.c : moved diagram only stuff from diagram_load_into() to
	diagram_load() so ...
	* app/interface.c : ... we can use diagram_load_into() to drop files
	on the canvas, i.e. really load them _into_ an exisiting diagram

	* plug-ins/python/pydia-property.c : better debug support for wrong
	types in lists (of lists) when doing array assignments 
	(e.g. uml_class::operations)
	* plug-ins/python/doxrev.py : an import filter for XML generated by
	doxygen. One step further to do reverse engineering with Dia.
	* plug-ins/python/Makefile.am : at the moment only added to EXTRA_DIST

2007-02-17  Lars Clausen  <lars@raeder.dk>

        * objects/UML/class.c
        * objects/UML/object.c
        * objects/UML/state.c
        * objects/UML/small_package.c
        * objects/GRAFCET/boolequation.c: Make sure to call set_font
	before calling draw_string

	* objects/UML/class.c (umlclass_set_props): #ifdef out debugging
	statement. 

2007-02-12  Hans Breuer  <hans@breuer.org>

	* lib/libdia.def : added text_get_line_strlen
	* makefile.msc : delete config.h on clean
	
	* plug-ins/python/pydia-property.c : allow to set string properties 
	with unicode 

2007-02-10  Hans Breuer  <hans@breuer.org>

	[ two more steps slowly fixing issues from bug #340352 ]
	* plug-ins/python/diamodule.c : instead of breaking compatibility with
	former PyDia plug-ins reimplmented dia.register_calback() by mapping
	to the GtkAction framework (it is not yet possible again to create 
	new menus, only adding menuitems to existing menus)
	* plug-ins/python/select_by.py : restored menuitems to shorter form

2007-02-08  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi:
	* installer/win32/langmacros.nsh:
	* installer/win32/locale/*.nsh: Added Python plug-in
	