@@ -4,7 +4,7 @@
 
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN" "../../dtd/docbookx.dtd" [
 
-    <!ENTITY VERSION "0.96-pre4">
+    <!ENTITY VERSION "0.96-pre5">
 
     <!ENTITY INTRODUCTION SYSTEM "intro.xml">
 
